Converting menu to WPF Popup

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -36,7 +36,11 @@
             <DockPanel Grid.Column="0" Grid.Row="0">
                 <StackPanel Orientation="Vertical" DockPanel.Dock="Top" Height="40" Background="Transparent">
                     <Border Grid.Row="0" Grid.Column="5" Padding="7" BorderThickness="0" HorizontalAlignment="Right">
-                        <Button BorderThickness="0" Click="onMenuClick" Content="⚙" FontSize="16" Padding="5" FontWeight="Bold" Foreground="Gold" Background="Transparent" />
+                        <Button Name="MenuButton" BorderThickness="0" Click="onMenuClick" FontSize="16" Padding="5" FontWeight="Bold" Foreground="Gold" Background="Transparent">
+                            <StackPanel>
+                                <TextBlock Text="⚙"/>
+                            </StackPanel>
+                        </Button>
                     </Border>
                 </StackPanel>
 
@@ -62,94 +66,6 @@
                 </Grid>
             </DockPanel>
 
-            <Border Name="MenuPopup" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Right" Visibility="Hidden"
-                    d:Visibility="Visible"
-                    VerticalAlignment="Top"
-                    Margin="20,20" Width="450" Padding="5,5"
-                    Background="{DynamicResource {x:Static SystemColors.MenuBrushKey}}">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="10px"/>
-                        <ColumnDefinition Width="1*"/>
-                    </Grid.ColumnDefinitions>
-
-                    <StackPanel Grid.Column="0">
-                        <TextBlock Margin="0,5" TextWrapping="Wrap"><Bold>Current menu:</Bold> <Run Text="{Binding Path=CurrentMenu.Name}"></Run></TextBlock>
-                        <TextBlock Margin="0,5" TextWrapping="Wrap"><Bold>App:</Bold> <Run Text="{Binding Path=ApplicationProcessName}"></Run></TextBlock>
-                        <TextBlock Margin="0,5" TextWrapping="Wrap"><Bold>Exe:</Bold> <Run Text="{Binding Path=ApplicationProcessExecutable}"></Run></TextBlock>
-                        <TextBlock Margin="0,5" TextWrapping="Wrap"><Bold>Mouse pos:</Bold> <Run Text="{Binding Path=MouseX}"/>,<Run Text="{Binding Path=MouseY}"/></TextBlock>
-
-                        <TextBlock Margin="0,5" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" MaxHeight="40"><Bold>Window:</Bold> <Run Text="{Binding Path=ApplicationWindowTitle}"></Run></TextBlock>
-                    </StackPanel>
-                    
-                    <StackPanel Grid.Column="2">
-
-                        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Height="120">
-                            <ListView Name="MenuList" ItemsSource="{Binding Path=AllMenus}" Background="Transparent" BorderThickness="0"
-                                  SelectionChanged="MenuList_SelectionChanged">
-                                <ListView.ItemTemplate>
-                                    <DataTemplate>
-                                        <TextBlock Text="{Binding Name}" Margin="0,5"  />
-                                    </DataTemplate>
-                                </ListView.ItemTemplate>
-                            </ListView>
-                        </ScrollViewer>
-
-                        <Line StrokeThickness="5" Stroke="Silver" Margin="3,2"
-                          HorizontalAlignment="Stretch" VerticalAlignment="Center"
-                          X1="0" X2="300" ClipToBounds="True" />
-
-                        <CheckBox Content="Lock window" IsChecked="{Binding LockMenu}" />
-
-                        <Line StrokeThickness="5" Stroke="Silver" Margin="3,2"
-                          HorizontalAlignment="Stretch" VerticalAlignment="Center"
-                          X1="0" X2="300" ClipToBounds="True" />
-
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Button Content="New" Margin="5" Padding="5,2,5,2" Grid.Column="0"
-                                Command="{Binding RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="New"/>
-                            <Button Content="Open" Margin="5" Padding="5,2,5,2" Grid.Column="1"
-                                Command="{Binding RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="Open"/>
-                            <Button Content="Save" Margin="5" Padding="5,2,5,2" Grid.Column="2"
-                                Command="{Binding RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="Save"/>
-                        </Grid>
-
-                        <Line StrokeThickness="5" Stroke="Silver" Margin="3,2"
-                          HorizontalAlignment="Stretch" VerticalAlignment="Center"
-                          X1="0" X2="300" ClipToBounds="True" />
-
-                        <Button Margin="0,5" Click="onConfigure">Configure</Button>
-
-                        <Line StrokeThickness="5" Stroke="Silver" Margin="3,2"
-                          HorizontalAlignment="Stretch" VerticalAlignment="Center"
-                          X1="0" X2="300" ClipToBounds="True" />
-
-                        <DockPanel>
-                            <Label Content="Display zoom:" VerticalAlignment="Center" DockPanel.Dock="Left"/>
-                            <TextBlock Text="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=Settings.DisplayZoom,StringFormat=F2}"
-                                       Width="50" VerticalAlignment="Center" Padding="5,0,5,0"/>
-                            <Slider Orientation="Horizontal" Minimum="-2" Maximum="2" VerticalAlignment="Center" LargeChange="0.2" SmallChange="0.05"
-                                Value="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=Settings.DisplayZoomLogValue}"
-                                />
-                        </DockPanel>
-
-
-                        <Line StrokeThickness="5" Stroke="Silver" Margin="3,2"
-                          HorizontalAlignment="Stretch" VerticalAlignment="Center"
-                          X1="0" X2="300" ClipToBounds="True" />
-
-                        <Button Margin="0,5" Click="onQuitClick">Quit</Button>
-                    </StackPanel>
-                </Grid>
-
-                
-            </Border>
             <TextBlock x:Name="MessageDisplayBox" HorizontalAlignment="Center" VerticalAlignment="Center"
                        Text="{Binding}" FontSize="36" Foreground="AliceBlue" Background="Transparent"
                        Focusable="False" IsHitTestVisible="False"
@@ -175,6 +91,99 @@
                     </Storyboard>
                 </TextBlock.Resources>
             </TextBlock>
+            <Popup Name="MenuPopup"
+                   IsOpen="False" StaysOpen="False" d:IsOpen="True"
+                   Placement="Left" PlacementTarget="{Binding ElementName=MenuButton}"
+                   HorizontalOffset="-5" VerticalOffset="5"
+                   Opened="MenuPopup_Opened" Closed="MenuPopup_Closed"
+                   >
+                <Border Margin="0" Width="450" Padding="5,5" BorderThickness="1"
+                                            Background="{DynamicResource {x:Static SystemColors.MenuBrushKey}}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="10px"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Grid.Column="0">
+                            <TextBlock Margin="0,5" TextWrapping="Wrap"><Bold>Current menu:</Bold> <Run Text="{Binding Path=CurrentMenu.Name}"></Run></TextBlock>
+                            <TextBlock Margin="0,5" TextWrapping="Wrap"><Bold>App:</Bold> <Run Text="{Binding Path=ApplicationProcessName}"></Run></TextBlock>
+                            <TextBlock Margin="0,5" TextWrapping="Wrap"><Bold>Exe:</Bold> <Run Text="{Binding Path=ApplicationProcessExecutable}"></Run></TextBlock>
+                            <TextBlock Margin="0,5" TextWrapping="Wrap"><Bold>Mouse pos:</Bold> <Run Text="{Binding Path=MouseX}"/>,<Run Text="{Binding Path=MouseY}"/></TextBlock>
+
+                            <TextBlock Margin="0,5" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" MaxHeight="40"><Bold>Window:</Bold> <Run Text="{Binding Path=ApplicationWindowTitle}"></Run></TextBlock>
+                        </StackPanel>
+
+                        <StackPanel Grid.Column="2">
+
+                            <Label Content="Menu list:" FontWeight="Bold"/>
+                            
+                            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Height="120">
+                                <ListView Name="MenuList" ItemsSource="{Binding Path=AllMenus}" Background="Transparent" BorderThickness="0"
+                                  SelectionChanged="MenuList_SelectionChanged">
+                                    <ListView.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Name}" Margin="0,5"  />
+                                        </DataTemplate>
+                                    </ListView.ItemTemplate>
+                                </ListView>
+                            </ScrollViewer>
+
+                            <Line StrokeThickness="5" Stroke="Silver" Margin="5,2"
+                          HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                          X1="0" X2="300" ClipToBounds="True" />
+
+                            <CheckBox Margin="5" Content="Lock current menu" IsChecked="{Binding LockMenu}" />
+
+                            <Line StrokeThickness="5" Stroke="Silver" Margin="5,2"
+                          HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                          X1="0" X2="300" ClipToBounds="True" />
+
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Button Content="New" Margin="5" Padding="5,2,5,2" Grid.Column="0"
+                                Command="{Binding RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="New"/>
+                                <Button Content="Open" Margin="5" Padding="5,2,5,2" Grid.Column="1"
+                                Command="{Binding RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="Open..."/>
+                                <Button Content="Save" Margin="5" Padding="5,2,5,2" Grid.Column="2"
+                                Command="{Binding RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="Save..."/>
+                            </Grid>
+
+                            <Line StrokeThickness="5" Stroke="Silver" Margin="5,2"
+                          HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                          X1="0" X2="300" ClipToBounds="True" />
+
+                            <Button Margin="5" Click="onConfigure">Edit menus...</Button>
+
+                            <Line StrokeThickness="5" Stroke="Silver" Margin="5,2"
+                          HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                          X1="0" X2="300" ClipToBounds="True" />
+
+                            <DockPanel>
+                                <Label Content="Display zoom:" VerticalAlignment="Center" DockPanel.Dock="Left"/>
+                                <TextBlock Text="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=Settings.DisplayZoom,StringFormat=F2}"
+                                       Width="50" VerticalAlignment="Center" Padding="5,0,5,0"/>
+                                <Slider Orientation="Horizontal" Minimum="-2" Maximum="2" VerticalAlignment="Center" LargeChange="0.2" SmallChange="0.05"
+                                Value="{Binding RelativeSource={RelativeSource AncestorType=Window},Path=Settings.DisplayZoomLogValue}"
+                                />
+                            </DockPanel>
+
+
+                            <Line StrokeThickness="5" Stroke="Silver" Margin="5,2"
+                          HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                          X1="0" X2="300" ClipToBounds="True" />
+
+                            <Button Margin="5,5" Click="onQuitClick">Quit</Button>
+                        </StackPanel>
+                    </Grid>
+                </Border>
+            </Popup>
+
         </Grid>
     </Viewbox>
 
