--- a/ConfigurationWindow.xaml
+++ b/ConfigurationWindow.xaml
@@ -106,6 +106,7 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="auto"/>
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Row="0" Grid.Column="0">Application:</TextBlock>
@@ -114,7 +115,12 @@
                               >
                         <TextBlock>Use regex</TextBlock>
                     </CheckBox>
-                    <TextBox Grid.Row="0" Grid.Column="2" HorizontalAlignment="Stretch"
+                    <CheckBox Grid.Row="0" Grid.Column="2" Margin="5,0"
+                              IsChecked="{Binding Path=MenuSelectors/MatchCaseForExecutable}"
+                              >
+                        <TextBlock>Match case</TextBlock>
+                    </CheckBox>
+                    <TextBox Grid.Row="0" Grid.Column="3" HorizontalAlignment="Stretch"
                              Text="{Binding Path=MenuSelectors/ExecutablePattern}"/>
 
                     <TextBlock Grid.Row="1" Grid.Column="0" >Window title:</TextBlock>
@@ -122,7 +128,12 @@
                               IsChecked="{Binding Path=MenuSelectors/UseRegexForWindowTitle}">
                             <TextBlock>Use regex</TextBlock>
                     </CheckBox>
-                    <TextBox Grid.Row="1" Grid.Column="2"  HorizontalAlignment="Stretch"
+                    <CheckBox Grid.Row="1" Grid.Column="2" Margin="5,0"
+                              IsChecked="{Binding Path=MenuSelectors/MatchCaseForWindowTitle}"
+                              >
+                        <TextBlock>Match case</TextBlock>
+                    </CheckBox>
+                    <TextBox Grid.Row="1" Grid.Column="3"  HorizontalAlignment="Stretch"
                              Text="{Binding Path=MenuSelectors/WindowTitlePattern}"/>
                 </Grid>
             
